--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
+asyncio==3.4.3
 attrs==23.1.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
 discord==2.2.3
+discord-timers==0.1.0
 discord.py==2.2.3
 frozenlist==1.3.3
 idna==3.4
